# telegram-bot-pizza

./: .gitignore  TODO.txt  app_copy.py  main.py  pizza-bot.py  pyproject.toml
app/: generators.py  handlers.py
data/dodo_faiss_index/: index.faiss  index.pkl
notebooks/: app.ipynb
